--- a/index.html
+++ b/index.html
@@ -1,104 +1,139 @@
 <!DOCTYPE html>
 <html lang="id">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Profil Rumah Sakit Sehat Jiwa</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            color: #333;
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
-        }
-        h1, h2, h3 {
-            color: #007BFF;
-            border-bottom: 2px solid #007BFF;
-            padding-bottom: 5px;
-            margin-top: 25px;
-        }
-        .header {
-            text-align: center;
-            margin-bottom: 30px;
-            background-color: #f8f9fa;
-            padding: 15px;
-            border-radius: 8px;
-        }
-        /* NEW: Style for the utility menu */
-        .utility-menu {
-            text-align: right;
-            margin-bottom: 15px;
-        }
-        .utility-menu a {
-            color: #007BFF;
-            text-decoration: none;
-            font-weight: bold;
-            padding: 8px 15px;
-            border: 1px solid #007BFF;
-            border-radius: 4px;
-            transition: background-color 0.3s, color 0.3s;
-        }
-        .utility-menu a:hover {
-            background-color: #007BFF;
-            color: white;
-        }
-        /* END NEW */
-        .section {
-            margin-bottom: 20px;
-            padding: 15px;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-        }
-        .layanan-list {
-            list-style-type: none;
-            padding-left: 0;
-        }
-        .layanan-list li {
-            margin-bottom: 8px;
-            padding-left: 20px;
-            position: relative;
-        }
-        .layanan-list li::before {
-            content: "✓";
-            color: #28a745;
-            font-weight: bold;
-            display: inline-block;
-            width: 1em;
-            margin-left: -1em;
-        }
+      body {
+        font-family: Arial, sans-serif;
+        line-height: 1.6;
+        color: #333;
+        max-width: 800px;
+        margin: 0 auto;
+        padding: 20px;
+      }
+      h1,
+      h2,
+      h3 {
+        color: #007bff;
+        border-bottom: 2px solid #007bff;
+        padding-bottom: 5px;
+        margin-top: 25px;
+      }
+      .header {
+        text-align: center;
+        margin-bottom: 30px;
+        background-color: #f8f9fa;
+        padding: 15px;
+        border-radius: 8px;
+      }
+      /* NEW: Style for the utility menu */
+      .utility-menu {
+        text-align: right;
+        margin-bottom: 15px;
+      }
+      .utility-menu a {
+        color: #007bff;
+        text-decoration: none;
+        font-weight: bold;
+        padding: 8px 15px;
+        border: 1px solid #007bff;
+        border-radius: 4px;
+        transition: background-color 0.3s, color 0.3s;
+      }
+      .utility-menu a:hover {
+        background-color: #007bff;
+        color: white;
+      }
+      /* END NEW */
+      .section {
+        margin-bottom: 20px;
+        padding: 15px;
+        border: 1px solid #ddd;
+        border-radius: 5px;
+      }
+      .layanan-list {
+        list-style-type: none;
+        padding-left: 0;
+      }
+      .layanan-list li {
+        margin-bottom: 8px;
+        padding-left: 20px;
+        position: relative;
+      }
+      .layanan-list li::before {
+        content: "✓";
+        color: #28a745;
+        font-weight: bold;
+        display: inline-block;
+        width: 1em;
+        margin-left: -1em;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
+    <div class="header">
+      <h1>RUMAH SAKIT SEHAT JIWA</h1>
+      <p>
+        <strong>"Pusat Pelayanan Kesehatan Jiwa Holistik dan Terpadu"</strong>
+      </p>
+    </div>
 
-<div class="header">
-    <h1>RUMAH SAKIT SEHAT JIWA</h1>
-    <p><strong>"Pusat Pelayanan Kesehatan Jiwa Holistik dan Terpadu"</strong></p>
-</div>
+    <div class="utility-menu">
+      <a href="user-login.html">MASUK (Login Pasien/Karyawan)</a>
+    </div>
+    <div class="section">
+      <h2>Visi & Misi</h2>
 
-<div class="utility-menu">
-    <a href="user-login.html">MASUK (Login Pasien/Karyawan)</a>
-</div>
-<div class="section">
-    <h2>Visi & Misi</h2>
-    
-    <h3>Visi</h3>
-    <p>Menjadi Rumah Sakit Kesehatan Jiwa terdepan yang terpercaya dalam memberikan pelayanan holistik, profesional, dan terjangkau bagi seluruh lapisan masyarakat.</p>
+      <h3>Visi</h3>
+      <p>
+        Menjadi Rumah Sakit Kesehatan Jiwa terdepan yang terpercaya dalam
+        memberikan pelayanan holistik, profesional, dan terjangkau bagi seluruh
+        lapisan masyarakat.
+      </p>
 
-    <h3>Misi</h3>
-    <ol>
-        <li>Memberikan layanan kesehatan jiwa dan non-jiwa yang bermutu, didukung oleh tim multidisiplin yang kompeten.</li>
-        <li>Mengembangkan program rehabilitasi dan psikososial untuk mendukung reintegrasi pasien ke masyarakat.</li>
-        <li>Menyediakan akses layanan yang mudah dan setara bagi peserta Program Jaminan Kesehatan Nasional (JKN/BPJS Kesehatan).</li>
-    </ol>
-</div>
+      <h3>Misi</h3>
+      <ol>
+        <li>
+          Memberikan layanan kesehatan jiwa dan non-jiwa yang bermutu, didukung
+          oleh tim multidisiplin yang kompeten.
+        </li>
+        <li>
+          Mengembangkan program rehabilitasi dan psikososial untuk mendukung
+          reintegrasi pasien ke masyarakat.
+        </li>
+        <li>
+          Menyediakan akses layanan yang mudah dan setara bagi peserta Program
+          Jaminan Kesehatan Nasional (JKN/BPJS Kesehatan).
+        </li>
+      </ol>
+    </div>
 
-<div class="section">
-    <h2>🏥 Layanan Kesehatan Jiwa Inti (Oleh Psikiater)</h2>
-    <p>Kami didukung oleh tim <strong>Spesialis Kedokteran Jiwa (Psikiater)</strong> yang berpengalaman dalam penanganan berbagai kasus:</p>
-    
-    <ul class="layanan-list">
-        <li><strong>Poli Psikiatri Dewasa & Geriatri:</strong> Depresi, Gangguan Kecemasan (Anxiety Disorder), Skizofrenia, Gangguan Bipolar, Demensia, dan Gangguan Tidur.</li>
-        <li><strong>Poli Psikiatri Anak & Remaja:</strong> Konsultasi dan terapi untuk Gangguan Perhatian/Hiperaktif (ADHD), Autisme, Gangguan Belajar, dan masalah perilaku remaja.</li>
-        <li><strong>K
+    <div class="section">
+      <h2>🏥 Layanan Kesehatan Jiwa Inti (Oleh Psikiater)</h2>
+      <p>
+        Kami didukung oleh tim
+        <strong>Spesialis Kedokteran Jiwa (Psikiater)</strong> yang
+        berpengalaman dalam penanganan berbagai kasus:
+      </p>
+
+      <ul class="layanan-list">
+        <li>
+          <strong>Poli Psikiatri Dewasa & Geriatri:</strong> Depresi, Gangguan
+          Kecemasan (Anxiety Disorder), Skizofrenia, Gangguan Bipolar, Demensia,
+          dan Gangguan Tidur.
+        </li>
+        <li>
+          <strong>Poli Psikiatri Anak & Remaja:</strong> Konsultasi dan terapi
+          untuk Gangguan Perhatian/Hiperaktif (ADHD), Autisme, Gangguan Belajar,
+          dan masalah perilaku remaja.
+        </li>
+        <li>
+          <strong>Ketergantungan Zat:</strong> Penanganan dan rehabilitasi untuk
+          adiksi seperti alkohol, narkoba, atau obat-obatan resep.
+        </li>
+      </ul>
+    </div>
+  </body>
+</html>
