--- a/user-profile.html
+++ b/user-profile.html
@@ -119,7 +119,7 @@
 
     <div class="section">
       <h2>🔗 Akses Cepat</h2>
-      <a href="#" class="action-button">Lihat Hasil Lab</a>
+      <a href="hasil-lab.html" class="action-button">Lihat Hasil Lab</a>
       <a href="#" class="action-button" style="background-color: #007bff"
         >Pesan Obat Ulang (Resep Elektronik)</a
       >
