--- a/user-profile.html
+++ b/user-profile.html
@@ -41,7 +41,7 @@
         margin-bottom: 20px;
         padding: 15px;
         border: 1px solid #ddd;
-        border-radius: 5px;
+        border-radius: 20px;
       }
       .profile-info p {
         margin: 5px 0;
@@ -120,7 +120,7 @@
     <div class="section">
       <h2>🔗 Akses Cepat</h2>
       <a href="hasil-lab.html" class="action-button">Lihat Hasil Lab</a>
-      <a href="#" class="action-button" style="background-color: #007bff"
+      <a href="pesan_obat_ulang.html" class="action-button" style="background-color: #007bff"
         >Pesan Obat Ulang (Resep Elektronik)</a
       >
     </div>
