--- a/user-profile.html
+++ b/user-profile.html
@@ -84,7 +84,7 @@
     <div class="section" style="background-color: #e9f7ef">
       <h2>👤 Data Diri</h2>
       <div class="profile-info">
-        <p><strong>Nama Lengkap:</strong> Rafli</p>
+        <p><strong>Nama Lengkap:</strong> Rafli Latuconsina</p>
         <p><strong>ID/NIK:</strong> 1234567890</p>
         <p><strong>Status:</strong> Pasien Rawat Jalan</p>
         <p><strong>Jaminan Kesehatan:</strong> BPJS Kesehatan Kelas I</p>
@@ -120,7 +120,10 @@
     <div class="section">
       <h2>🔗 Akses Cepat</h2>
       <a href="hasil-lab.html" class="action-button">Lihat Hasil Lab</a>
-      <a href="pesan_obat_ulang.html" class="action-button" style="background-color: #007bff"
+      <a
+        href="pesan_obat_ulang.html"
+        class="action-button"
+        style="background-color: #007bff"
         >Pesan Obat Ulang (Resep Elektronik)</a
       >
     </div>
