minor typo change

--- a/hasil-lab.html
+++ b/hasil-lab.html
@@ -228,9 +228,7 @@
 
         <!-- Tombol Kembali/Aksi Lain -->
         <div style="text-align: center;">
-            <button onclick="goBack()" class="back-button">
-                &larr; Kembali ke Jadwal
-            </button>
+            <a href="user-profile.html" class="back-button">Kembali</a>
         </div>
 
         <!-- Modals/Message Box -->
