--- a/pesan_obat_ulang.html
+++ b/pesan_obat_ulang.html
@@ -224,7 +224,7 @@
         <!-- Form Pemilihan Obat -->
         <form id="refillForm" onsubmit="handleRefillSubmit(event)">
             <div class="status-info warning-status">
-                Perhatian: Pengulangan obat tunduk pada persetujuan dokter dan ketersediaan stok.
+                Perhatian: Pengulangan obat diikuti oleh persetujuan dokter dan ketersediaan stok.
             </div>
 
             <ul id="medication-selection" class="medication-list">
