--- a/pesan_obat_ulang.html
+++ b/pesan_obat_ulang.html
@@ -233,9 +233,7 @@
             
             <!-- Tombol Aksi -->
             <div class="action-container">
-                <button type="button" onclick="goBack()" class="back-button">
-                    &larr; Kembali
-                </button>
+                <a href="user-profile.html" class="back-button">Kembali</a>
                 <button type="submit" id="submitRefill" class="submit-button disabled-button" disabled>
                     Ajukan Permintaan Obat Ulang (0)
                 </button>
