--- a/index.html
+++ b/index.html
@@ -122,7 +122,8 @@
         <li>
           <strong>Poli Psikiatri Dewasa & Geriatri:</strong> Depresi, Gangguan
           Kecemasan (Anxiety Disorder), Skizofrenia, Gangguan Bipolar, Demensia,
-          dan Gangguan Tidur.
+          dan Gangguan Ti
+          dur.
         </li>
         <li>
           <strong>Poli Psikiatri Anak & Remaja:</strong> Konsultasi dan terapi
